--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,10 @@
 
-v1.2.0
+v1.3.0
 
 - code optimisation
 - fixed versions for dependency packages installed via conda
+- r-colorramps is now distributed in the conda channel pdp10 and depends on r-base in r channel. 
+This removes dependency conflicts between r-base versions between r and conda-forge channels.
 
 
 v1.0.0
